[gd_scene load_steps=8 format=3 uid="uid://dw01ewijj6lj7"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_pflmj"]
[ext_resource type="PackedScene" uid="uid://dhig53gq04o6f" path="res://ui/bg.tscn" id="1_vtlxb"]
[ext_resource type="FontFile" uid="uid://dy04l2c31hyma" path="res://art/fonts/Silkscreen-Regular.ttf" id="2_anqjw"]
[ext_resource type="StyleBox" uid="uid://u2kfkut6slb0" path="res://art/styles/button_normal.tres" id="3_7homs"]
[ext_resource type="StyleBox" uid="uid://c0vg1hr1pgc2r" path="res://art/styles/button_disabled.tres" id="4_kh21q"]
[ext_resource type="StyleBox" uid="uid://inq4sf0eei6u" path="res://art/styles/button_hover.tres" id="5_48hjw"]
[ext_resource type="PackedScene" uid="uid://dps2mir7ylw1d" path="res://ui/screen_scaler.tscn" id="7_hsxsj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pflmj")

[node name="Background" parent="." instance=ExtResource("1_vtlxb")]
layout_mode = 1

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -410.0
offset_top = -185.0
offset_right = 411.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(410, 64)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_anqjw")
theme_override_font_sizes/bold_italics_font_size = 100
theme_override_font_sizes/italics_font_size = 100
theme_override_font_sizes/mono_font_size = 100
theme_override_font_sizes/normal_font_size = 100
theme_override_font_sizes/bold_font_size = 100
bbcode_enabled = true
text = "[wave][center][color=red]Tic[/color][color=blue]Tac[/color]Toe[/center][/wave]"
scroll_active = false
autowrap_mode = 0

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -241.5
offset_top = -40.5
offset_right = 241.5
offset_bottom = 190.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="PlayLocalButton" type="Button" parent="Menu"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_anqjw")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = ExtResource("3_7homs")
theme_override_styles/disabled_mirrored = ExtResource("4_kh21q")
theme_override_styles/disabled = ExtResource("4_kh21q")
theme_override_styles/hover_pressed_mirrored = ExtResource("5_48hjw")
theme_override_styles/hover_pressed = ExtResource("5_48hjw")
theme_override_styles/hover_mirrored = ExtResource("5_48hjw")
theme_override_styles/hover = ExtResource("5_48hjw")
theme_override_styles/pressed_mirrored = ExtResource("3_7homs")
theme_override_styles/pressed = ExtResource("3_7homs")
theme_override_styles/normal_mirrored = ExtResource("3_7homs")
theme_override_styles/normal = ExtResource("3_7homs")
text = "Play Local"

[node name="PlayCPUButton" type="MenuButton" parent="Menu"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 1, 1)
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_anqjw")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = ExtResource("3_7homs")
theme_override_styles/disabled_mirrored = ExtResource("4_kh21q")
theme_override_styles/disabled = ExtResource("4_kh21q")
theme_override_styles/hover_pressed_mirrored = ExtResource("5_48hjw")
theme_override_styles/hover_pressed = ExtResource("5_48hjw")
theme_override_styles/hover_mirrored = ExtResource("5_48hjw")
theme_override_styles/hover = ExtResource("5_48hjw")
theme_override_styles/pressed_mirrored = ExtResource("3_7homs")
theme_override_styles/pressed = ExtResource("3_7homs")
theme_override_styles/normal_mirrored = ExtResource("3_7homs")
theme_override_styles/normal = ExtResource("3_7homs")
text = "Play vs CPU"
flat = false
item_count = 4
popup/item_0/text = "Random"
popup/item_1/text = "Easy"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2
popup/item_3/text = "Imposible"
popup/item_3/id = 3

[node name="PlayOnlineButton" type="Button" parent="Menu"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.61339, 0.61339, 0.61339, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_anqjw")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = ExtResource("3_7homs")
theme_override_styles/disabled_mirrored = ExtResource("4_kh21q")
theme_override_styles/disabled = ExtResource("4_kh21q")
theme_override_styles/hover_pressed = ExtResource("3_7homs")
theme_override_styles/hover = ExtResource("3_7homs")
theme_override_styles/pressed = ExtResource("3_7homs")
theme_override_styles/normal = ExtResource("3_7homs")
disabled = true
text = "Play Online"

[node name="ScreenScaler" parent="." instance=ExtResource("7_hsxsj")]
